--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     <section id="main" class="main-content" role="main">
         {{ content }}
     </section>
+    {% include elements/footer.html %}
     {% include scripts.html %}
  </body>
 </html>
