--- a/css/style.scss
+++ b/css/style.scss
@@ -28,6 +28,8 @@
 // ----------------------------------------------------------------------
 @import "elements/buttons";
 @import "elements/header";
+@import "elements/social";
+@import "elements/footer";
 @import "elements/top-stories";
 @import "elements/nav";
 @import "elements/buttons";
