--- a/_scss/elements/_buttons.scss
+++ b/_scss/elements/_buttons.scss
@@ -232,6 +232,38 @@
     background: transparent $social-button-sprite no-repeat scroll -366px -26px;
     width: 27px;
   }
+  
+  &.facebook-button a:hover span {
+    background-position: -55px -25px;
+  }
+
+  &.twitter-button a:hover span {
+    background-position: 0 -25px;
+  }
+
+  &.googleplus-button a:hover span {
+    background-position: -119px -25px;
+  }
+
+  &.pinterest-button a:hover span {
+    background-position: -30px -25px;
+  }
+
+  &.flickr-button a:hover span {
+    background-position: -94px -25px;
+  }
+
+  &.slideshare-button a:hover span {
+    background-position: -181px -25px;
+  }
+
+  &.youtube-button a:hover span {
+    background-position: -155px -25px;
+  }
+
+  &.instagram-button a:hover span {
+    background-position: -69px -25px;
+  }
 }
 
 .social-button-sm {
