--- a/_scss/elements/_headlines.scss
+++ b/_scss/elements/_headlines.scss
@@ -4,7 +4,7 @@
   
   ul {
     li {
-      margin: 0 0 20px;
+      margin: 0 0 25px;
       overflow: hidden;
       
       &:last-child { margin: 0; }
@@ -46,7 +46,7 @@
     }
   }
   
-  @include breakpoints(mobile) {
+  @include breakpoints(mobile nav) {
     ul li {
       border-bottom: 1px solid map-get($army-branding, grey20);
       padding-bottom: 20px;
