--- a/_includes/elements/paragraph-defaults.html
+++ b/_includes/elements/paragraph-defaults.html
@@ -1,10 +1,11 @@
+<p>Lorem ipsum dolor sit <a href="//www.army.mil/">amet</a>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <a href="//www.army.mil/">laboris nisi ut aliquip ex ea commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
 <div class="simple-list">
     <ul class="simple-column-full">
-        <li>Inline links should be semi-bold (600), underlined on hover</li>
-        <li>Font size 1em (16px)</li>
-        <li>Line height = 1.625em (26px)</li>
-        <li>All paragraphs need a margin-bottom of 1.25em (20px), with the exception of the last paragraph of each section, which needs a margin-bottom of 0 (using the :last-child selector)</li>
+        <li>Font size - 1em (16px)</li>
+        <li>Line height - 1.625em (26px)</li>
+        <li>Inline links - semi-bold (600), underlined on hover</li>
+        <li>Bottom margin - 1.25em (20px)</li>
+        <li>Last paragraphs in each section have a bottom margin of 0 (using the :last-child selector)</li>
     </ul>
 </div>
-
-<p>Lorem ipsum dolor sit <a href="//www.army.mil/">amet</a>, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco <a href="//www.army.mil/">laboris nisi ut aliquip ex ea commodo consequat</a>. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
