--- a/css/style.scss
+++ b/css/style.scss
@@ -37,6 +37,7 @@
 @import "elements/lists";
 @import "elements/accordion";
 @import "elements/headlines";
+@import "elements/dropdown-nav";
 
 //primary colors
 .white {
