add mobile dropdown navbar option

--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -17,6 +17,12 @@
     {% include elements/nav.html %}
     <div class="container no-bottom">
         <div class="inner-container">
+            <p class="large">NAV BAR (MOBILE DROPDOWN)</p>
+        </div>
+    </div>
+    {% include elements/nav-mobile-dropdown.html %}
+    <div class="container no-bottom">
+        <div class="inner-container">
             <p class="large">DROP DOWN NAV</p>
         </div>
     </div>
