fix JS void links

--- a/_includes/elements/nav-mobile-dropdown.html
+++ b/_includes/elements/nav-mobile-dropdown.html
@@ -4,10 +4,10 @@
         <div class="submenu-inner">
             <label for="submenu-toggle">News</label>
             <ul>
-                <li><a class="active" href="javascript:void();">Option 1</a></li>
-                <li><a href="javascript:void();">Option 2</a></li>
-                <li><a href="javascript:void();">Option 3</a></li>
-                <li><a href="javascript:void();">Option 4</a></li>
+                <li><a class="active" href="javascript:void(0);">Option 1</a></li>
+                <li><a href="javascript:void(0);">Option 2</a></li>
+                <li><a href="javascript:void(0);">Option 3</a></li>
+                <li><a href="javascript:void(0);">Option 4</a></li>
             </ul>
         </div>
     </div>
