--- a/_includes/colors.html
+++ b/_includes/colors.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="inner-container">
             <h2>02 | COLORS</h2>
-            <div id="primary-colors">
-                <div>Primary</div>
+            <div id="primary-colors" class="color-group">
+                <p class="large">PRIMARY</p>
                 <ul class="color-list">
                     <li>
                         <div class="color-box white-background"></div>
@@ -19,65 +19,65 @@
                     </li>
                 </ul>
             </div>
-            <div id="secondary-colors">
-                <div>Secondary</div>
+            <div id="secondary-colors" class="color-group">
+                <p class="large">SECONDARY</p>
                 <ul class="color-list">
                     <li>
-                        <div class="color-box dark-camo-background"></div>
-                        <p>#333C33</p>
+                        <div class="color-box light-camo-background"></div>
+                        <p>#BFB8AB</p>
                     </li>
                     <li>
                         <div class="color-box medium-camo-background"></div>
                         <p>#83847A</p>
                     </li>
                     <li>
-                        <div class="color-box light-camo-background"></div>
-                        <p>#BFB8AB</p>
+                        <div class="color-box dark-camo-background"></div>
+                        <p>#333C33</p>
                     </li>
                 </ul>
             </div>
-            <div id="accents-colors">
-                <div>Accents</div>
+            <div id="accents-colors" class="color-group">
+                <p class="large">ACCENTS</p>
                 <ul class="color-list">
                     <li>
                         <div class="color-box black-background"></div>
-                        <p>#030000</p>
+                        <p>#030000<span class="grey50">100%</span></p>
                     </li>
                     <li>
                         <div class="color-box grey90-background"></div>
-                        <p>#1A1A1A</p>
+                        <p>#1A1A1A<span class="grey50">90%</span></p>
                     </li>
                     <li>
                         <div class="color-box grey80-background"></div>
-                        <p>#333333</p>
+                        <p>#333333<span class="grey50">80%</span></p>
                     </li>
                     <li>
                         <div class="color-box grey70-background"></div>
-                        <p>#4C4C4C</p>
+                        <p>#4C4C4C<span class="grey50">70%</span></p>
                     </li>
                     <li>
                         <div class="color-box grey60-background"></div>
-                        <p>#656565</p>
+                        <p>#656565<span class="grey50">60%</span></p>
                     </li>
                     <li>
                         <div class="color-box grey50-background"></div>
-                        <p>#7F7F7F</p>
+                        <p>#7F7F7F<span class="grey50">50%</span></p>
                     </li>
                     <li>
                         <div class="color-box grey40-background"></div>
-                        <p>#999999</p>
+                        <p>#999999<span class="grey50">40%</span></p>
                     </li>
                     <li>
                         <div class="color-box grey30-background"></div>
-                        <p>#B3B3B3</p>
+                        <p>#B3B3B3<span class="grey50">30%</span></p>
                     </li>
                     <li>
                         <div class="color-box grey20-background"></div>
-                        <p>#CCCCCC</p>
+                        <p>#CCCCCC<span class="grey50">20%</span></p>
                     </li>
                     <li>
                         <div class="color-box grey10-background"></div>
-                        <p>#E5E5E5</p>
+                        <p>#E5E5E5<span class="grey50">10%</span></p>
                     </li>
                 </ul>
             </div>
