--- a/_includes/elements.html
+++ b/_includes/elements.html
@@ -2,7 +2,7 @@
 <section id="elements">
     <div class="container no-bottom">
         <div class="inner-container">
-            <h2>05 | ELEMENTS</h2>
+            <h2>04 | ELEMENTS</h2>
             <div class="elem">
                 <h4>LIST WIDGET</h4>
                 {% include elements/top-stories.html %}
@@ -52,6 +52,10 @@
             <div class="elem">
                 <h4>TRANSCRIPTS/PRESS RELEASES</h4>
                 {% include elements/headlines.html %}
+            </div>
+            <div class="elem">
+                <h4>LEADERS</h4>
+                {% include elements/leaders.html %}
             </div>
         </div>
     </div>
