--- a/_includes/elements/top-stories.html
+++ b/_includes/elements/top-stories.html
@@ -4,32 +4,22 @@
         </li>
         <li>
             <p class="small">NOVEMBER 18, 2016</p>
-            <p class="large">
-                Army National Guard director: Two weeks annually, weekend per month enough?
-            </p>
+            <p>Army National Guard director: Two weeks annually, weekend per month enough?</p>
         </li>
         <li>
             <p class="small">NOVEMBER 16, 2015</p>
-            <p class="large">
-                Army researchers add power, range to artillery
-            </p>
+            <p>Army researchers add power, range to artillery</p>
         </li>
         <li>
             <p class="small">NOVEMBER 14, 2015</p>
-            <p class="large">
-                Sky Soldiers conduct historic airborne operation during Exercise Iron Sword 15
-            </p>
+            <p>Sky Soldiers conduct historic airborne operation during Exercise Iron Sword 15</p>
         </li>
         <li>
             <p class="small">NOVEMBER 18, 2015</p>
-            <p class="large">
-                Program helps Soldiers, veterans get commercial driver's license
-            </p>
+            <p>Program helps Soldiers, veterans get commercial driver's license</p>
         </li>
         <li>
             <p class="small">NOVEMBER 14, 2015</p>
-            <p class="large">
-                Veterans recall Battle of Ia Drang at 50th anniversary
-            </p>
+            <p>Veterans recall Battle of Ia Drang at 50th anniversary</p>
         </li>
     </ul>
