--- a/_includes/grid.html
+++ b/_includes/grid.html
@@ -1,11 +1,12 @@
 <section id="grid">
     <div class="container">
         <div class="inner-container">
-           <h2>01 | GRID</h2> 
+           <h2>01 | GRID</h2>
         </div>
-    </div>
-    <div id="grid-example" class="container">
-        <p class="grid-example-container white black-background">1020px</p>
+        <div id="grid-example">
+        <p class="grid-example-container white black-background desktop">GRID BASE 1020px</p>
+        <p class="grid-example-container white black-background tablet">GRID BASE 740px</p>
+        <p class="grid-example-container white black-background mobile">GRID BASE 670px</p>
         <div class="inner-container">
             <div class="row">
                 <div class="span6">
@@ -40,7 +41,7 @@
                    <p class="gold-background">25%</p>
                </div>
             </div>
-            <div class="row">
+            <div class="row hide-mobile">
                 <div class="span2">
                     <p class="gold-background">1/6</p>
                 </div>
@@ -60,7 +61,7 @@
                    <p class="gold-background">16.6%</p>
                </div>
             </div>
-            <div class="row">
+            <div class="row hide-tablet">
                 <div class="span1">
                     <p class="gold-background">1/12</p>
                 </div>
@@ -100,62 +101,62 @@
             </div>
             <div class="row">
                 <div class="span12">
-                    <p class="gold-background">&nbsp;</p>
+                    <p class="gold-background">100%</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row hide-tablet">
                 <div class="span1">
-                    <p class="gold-background">55px</p>
+                    <p class="gold-background">1/12</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row hide-mobile">
                 <div class="span2">
-                    <p class="gold-background">140px</p>
+                    <p class="gold-background">2/12</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row">
                 <div class="span3">
-                    <p class="gold-background">225px</p>
+                    <p class="gold-background">3/12</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row">
                 <div class="span4">
-                    <p class="gold-background">310px</p>
+                    <p class="gold-background">4/12</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row">
                 <div class="span5">
-                    <p class="gold-background">395px</p>
+                    <p class="gold-background">5/12</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row">
                 <div class="span6">
-                    <p class="gold-background">480px</p>
+                    <p class="gold-background">6/12</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row">
                 <div class="span7">
-                    <p class="gold-background">565px</p>
+                    <p class="gold-background">7/12</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row">
                 <div class="span8">
-                    <p class="gold-background">650px</p>
+                    <p class="gold-background">8/12</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row">
                 <div class="span9">
-                    <p class="gold-background">735px</p>
+                    <p class="gold-background">9/12</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row">
                 <div class="span10">
-                    <p class="gold-background">820px</p>
+                    <p class="gold-background">10/12</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="black-background white row">
                 <div class="span11">
-                    <p class="gold-background">905px</p>
+                    <p class="gold-background">11/12</p>
                 </div>
             </div>
         </div>
