--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -3,6 +3,7 @@
     <div class="container">
         <div class="inner-container">
             <h2>03 | TYPOGRAPHY</h2>
+            <p>Overpass is being used instead of Interstate because... An open source webfont family inspired by Highway Gothic.  Download font here <a href="https://github.com/RedHatBrand/overpass">https://github.com/RedHatBrand/overpass</a></p>
             <ul class="typography-list">
                 <li>
                     <h1>H1 Overpass Bold 48px</h1>
