--- a/_scss/base/_colors.scss
+++ b/_scss/base/_colors.scss
@@ -1,3 +1,11 @@
+// ----------------------------------------------------------------------
+// Official Army Branding Colors
+// ----------------------------------------------------------------------
+
+// according to the official colors that are published on the Enterprise Branding Portal,
+// the gold color here should be #ffd530
+// however, design team decided to match the gold in the army star logo, which is #fec325
+// which is also the gold color used in the sprite
 
 $army-branding: (
     black: #030000,
@@ -18,11 +26,15 @@ $army-branding: (
     grey10: #e5e5e5
 );
 
+// ----------------------------------------------------------------------
+// Social Branding Colors
+// ----------------------------------------------------------------------
+
 $social-branding: (
     twitter: #55acee,
     google: #db4437,
     facebook: #3b5999,
     pinterest: #bd081c,
     email: #2f2f2f,
-	print: #2f2f2f
+    print: #2f2f2f
 );
