--- a/css/guide.scss
+++ b/css/guide.scss
@@ -4,9 +4,11 @@
 
 @import "base/variables";
 @import "base/mixins";
+@import 'base/custom-mixins';
+@import 'layout/grid-system';
+@import 'layout/grid';
 
 section {
-  margin-bottom: 20px;
   overflow: hidden;
   
   &#main {
@@ -18,48 +20,147 @@ section {
       margin-bottom: 13.802em;
     }
   }
+  
+  .section-break {
+    position: relative;
+    
+    &:after,
+    &:before {
+      background: map-get($army-branding, gold);
+      content: '';
+      height: 4px;
+      left: 0;
+      position: absolute;
+      right: 0;
+    }
+    
+    &:after { top: 0; }
+    &:before { top: 15px; }
+    
+    @include breakpoints(tablet lg_tablet) {
+      &:after { top: 10px; }
+      &:before { top: 25px; }
+    }
+    
+    @include breakpoints(sm_desktop desktop large really_big) {
+      &:after { top: 30px; }
+      &:before { top: 45px; }
+    }
+  }
 }
 
-.inner-container{
-    h2{
-        margin-bottom: 20px;
-    }
+.inner-container {
+  h2 {
+    margin-bottom: 60px;
+  }
+  p.large {
+    margin-bottom: 1.25em;
+  }
 }
 
 #grid-example {
   text-align: center;
-  .grid-example-container{
+  
+  .grid-example-container {
+    display: none;
     margin-bottom: 20px;
+    
+    &.mobile { display: block; }
   }
+  
   .row {
     margin-bottom: 20px;
+    
+    &:last-child { margin-bottom: 0; }
+    
+    &.hide-mobile,
+    &.hide-tablet { display: none; }
+    
     p {
-      padding: 10px 0;
       border: 1px solid #000;
+      color: #000;
+      padding: 10px 0;
+    }
+  }
+  
+  @include breakpoints(sm_desktop desktop large really_big) {
+    .row.hide-mobile,
+    .row.hide-tablet { display: block; }
+    
+    .grid-example-container {
+      &.desktop { display: block; }
+      &.mobile { display: none; }
+    }
+  }
+  @include breakpoints(lg_tablet) {
+    .row.hide-mobile { display: block; }
+    
+    .grid-example-container {
+      &.tablet { display: block; }
+      &.mobile { display: none; }
     }
   }
 }
 
 #colors {
+  .color-group {
+    margin: 0 0 60px;
+    max-width: 730px;
+    
+    &:last-child { margin-bottom: 0; }
+  }
+  
   .color-list {
     li {
       display: inline-block;
-      margin: 20px;
+      margin: 0 40px 20px 0px;
+      
+      span { display: block; }
     }
   }
-
+  
   .color-box {
-    height: 80px;
-    width: 80px;
     border: 1px solid #000;
-    margin-bottom: 20px;
+    height: 80px;
+    margin-bottom: 15px;
+    width: 80px;
+  }
+  
+  @include breakpoints(nav mobile) {
+    .color-list li { margin: 0 20px 20px 0px; }
+  }
+  
+  @include breakpoints(nav) {
+    .color-group {
+      margin: 0 auto 60px;
+      max-width: 400px;
+    }
+    
+    .color-list li {
+      &:last-child,
+      &:nth-child(4n) { margin-right: 0; }
+    }
+  }
+  
+  @include breakpoints(mobile) {
+    .color-group {
+      margin: 0 auto 60px;
+      max-width: 290px;
+    }
+    
+    .color-list li {
+      &:last-child,
+      &:nth-child(3n) { margin-right: 0; }
+    }
   }
 }
 
 #typography {
   .typography-list {
     li {
-      margin: 20px;
+      margin: 0 0 20px;
+      
+      h2 { margin: 0; }
       
       h4 {
         margin: 0;
@@ -74,8 +175,22 @@ section {
 
 #elements {
   .elem {
-    margin: 0 0 60px;
+    margin: 0 0 50px;
     &:last-child { margin: 0; }
+  }
+  
+  @include breakpoints(tablet lg_tablet) {
+    .elem {
+      margin: 0 0 60px;
+      &:last-child { margin: 0; }
+    }
+  }
+  
+  @include breakpoints(sm_desktop desktop large really_big) {
+    .elem {
+      margin: 0 0 100px;
+      &:last-child { margin: 0; }
+    }
   }
   
   .container.no-bottom {
