--- a/css/style.scss
+++ b/css/style.scss
@@ -38,6 +38,7 @@
 @import "elements/accordion";
 @import "elements/headlines";
 @import "elements/dropdown-nav";
+@import "elements/leaders";
 
 //primary colors
 .white {
